# lambda-calculus

./: .gitignore  dune-project  lambda.opam
lib/: ast.ml  dune  lexer.ml  lexer.mll  parser.mly
